--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,6 @@
-absl-py==1.3.0
-astunparse==1.6.3
-cachetools==5.2.0
-certifi==2022.9.24
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-cloudpickle==2.2.1
-colorama==0.4.6
-ConfigSpace==0.6.1
-contourpy==1.0.6
-cycler==0.11.0
-dask==2023.1.1
-distributed==2023.1.1
-docopt==0.6.2
-flatbuffers==22.10.26
-fonttools==4.38.0
-fsspec==2023.1.0
-future==0.18.3
-gast==0.4.0
-google-auth==2.14.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.50.0
-h5py==3.7.0
-HeapDict==1.0.1
-hyperopt==0.2.7
-idna==3.4
-imbalanced-learn==0.10.1
-imblearn==0.0
-importlib-metadata==5.0.0
-Jinja2==3.1.2
-joblib==1.2.0
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.4
-libclang==14.0.6
-locket==1.0.0
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-more-itertools==9.0.0
-msgpack==1.0.4
-networkx==3.0
-numpy==1.23.4
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.5.1
-partd==1.3.0
-Pillow==9.3.0
-pipreqs==0.4.11
-protobuf==3.19.6
-psutil==5.9.4
-py4j==0.10.9.7
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.6
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-requests==2.28.1
-requests-oauthlib==1.3.1
+numpy==1.24.3
+pandas==1.4.1
 rpy2==3.5.6
-rsa==4.9
-scikit-learn==1.1.3
-scipy==1.9.3
-six==1.16.0
-sortedcontainers==2.4.0
-tblib==1.7.0
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.1
-tensorflow-estimator==2.10.0
-tensorflow-io-gcs-filesystem==0.27.0
-termcolor==2.1.0
-threadpoolctl==3.1.0
-toolz==0.12.0
-tornado==6.2
-tqdm==4.64.1
-typing_extensions==4.4.0
-tzdata==2022.6
-tzlocal==4.2
-urllib3==1.26.12
-Werkzeug==2.2.2
-wrapt==1.14.1
-yarg==0.1.9
-zict==2.2.0
-zipp==3.10.0
+scikit_learn==1.4.1.post1
+tensorflow==2.16.1
+tensorflow_intel==2.16.1
