--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 numpy==1.24.3
 pandas==1.4.1
 rpy2==3.5.6
-scikit_learn==1.4.1.post1
-tensorflow==2.16.1
-tensorflow_intel==2.16.1
+scikit_learn==1.4.2
+tensorflow==2.15.0
